update in resume and added project videos

--- a/projects.html
+++ b/projects.html
@@ -205,7 +205,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1C9w7xl7oJ3UgXr3SKdM-61CE8x9vTHYN/view?usp=sharing"
+                    href="videos/zomato.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -280,7 +280,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1168nRDGCOzF4f39jYgzeykEkZt-1_IG4/view?usp=sharing"
+                    href="videos/burger-hut - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -315,7 +315,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1ZpKARUbhoOp9jFAbcMi_SqUDvM5O4jDr/view?usp=sharing"
+                    href="videos/online compiler - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -387,7 +387,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1dGqfh5StJLQ4gi7Z71W5MbxTg2V4pBfc/view?usp=sharing"
+                    href="videos/snowicecreams.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -420,7 +420,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/17SQVqmXD-9Qbpagn2Kb3XWMQDkb9hR3a/view?usp=sharing"
+                    href="videos/todolist - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -455,7 +455,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1-lupYI12q28rKEMsPDs0Y7FlCpg3KNlG/view?usp=sharing"
+                    href="videos/calculator - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -492,7 +492,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1LsXG7fJxLkZxB0cuHYVmQnFFQKEzVv_x/view?usp=sharing"
+                    href="videos/react portfolio - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -530,7 +530,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1QOcVcnIchNwedbR07PPyz7nChSrQmOr7/view?usp=sharing"
+                    href="videos/code scoop - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -606,7 +606,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1YBBhVwyEA77I3LsMLz4sqSJtrEozkmXv/view?usp=sharing"
+                    href="videos/weatherapp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -665,7 +665,7 @@
                       <i class="fa-brands fa-behance"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1g64NpgNZBIdUlnym0Sr3NPhj57ouIKep/view?usp=sharing"
+                    href="videos/restuarant menu - Made with Clipchamp.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -702,7 +702,7 @@
                       <i class="fa-brands fa-behance"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1VSbfnywr_sAa7bdWMPFzSzLFQAsQLV-K/view?usp=sharing"
+                    href="https://youtube.com/shorts/Nc-qYAH0HQs?si=ZxryoS3gY5grE5PP"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
@@ -772,7 +772,7 @@
                       <i class="fa-brands fa-behance"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1fnon6tC3RrdwjpAcVuGBhvmC-GmOVK6Q/view?usp=sharing"
+                    href="videos/school app.mp4"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
