--- a/certifications.html
+++ b/certifications.html
@@ -342,39 +342,8 @@
       </div>
     </footer>
 
-    <script>
-      
-document.addEventListener("DOMContentLoaded", function () {
-  const modalHTML = `
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body text-center">
-            <img id="modalImage" src="" alt="Preview" class="img-fluid" />
-          </div>
-        </div>
-      </div>
-    </div>
-  `;
-
-
-  document.body.insertAdjacentHTML("beforeend", modalHTML);
-
-  const images = document.querySelectorAll("#cer img");
-  images.forEach((image) => {
-    image.addEventListener("click", function () {
-      const modalImage = document.getElementById("modalImage");
-      modalImage.src = this.src; 
-      const imageModal = new bootstrap.Modal(document.getElementById("imageModal"));
-      imageModal.show();
-    });
-  });
-});
-
-    </script>
+    <script src="certificate.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
