change in js code

--- a/projects.html
+++ b/projects.html
@@ -801,6 +801,6 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script/navbar.js"></script>
   </body>
 </html>
