--- a/certifications.html
+++ b/certifications.html
@@ -342,8 +342,9 @@
       </div>
     </footer>
 
-    <script src="certificate.js"></script>
-    
+    <script src="script/certificate.js"></script>
+    <script type="text/javascript" src="script/navbar.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
