--- a/experience.html
+++ b/experience.html
@@ -233,7 +233,8 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script/navbar.js"></script>
+
     <script
       src="https://kit.fontawesome.com/yourcode.js"
       crossorigin="anonymous"
