change in resume

--- a/experience.html
+++ b/experience.html
@@ -88,7 +88,7 @@
         <div class="row row-cols-1 row-cols-md-1 px-3 py-3">
           <div class="card" id="exp">
             <div class="card-body">
-              <h5 class="card-title">Slash Mark IT Startup - Remote</h5>
+              <h5 class="card-title">Slash Mark IT Solutions (OPC) Pvt. Ltd - Remote</h5>
               <h6 class="card-title"><u>Web Developer</u></h6>
               <p class="fst-italic">May 2024 - Aug 2024</p>
 
