--- a/experience.html
+++ b/experience.html
@@ -89,7 +89,7 @@
           <div class="card" id="exp">
             <div class="card-body">
               <h5 class="card-title">Slash Mark IT Solutions (OPC) Pvt. Ltd - Remote</h5>
-              <h6 class="card-title"><u>Web Developer</u></h6>
+              <h6 class="card-title"><u>Web Development Intern</u></h6>
               <p class="fst-italic">May 2024 - Aug 2024</p>
 
               <ul>
